some cleaning up regarding SONAR reports; a little reordering